# deep_rag

./: .env.example  .gitignore  Dockerfile  PERFORMANCE_FIXES.md  README.md  cli.py  deep_rag_spark.ipynb  docker-compose.yml  makefile  pyproject.toml  requirements.txt
deep_rag_backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  makefile  pyproject.toml  requirements-download.txt  requirements.txt
deep_rag_backend/inference/: service.py
deep_rag_backend/inference/agents/: compressor.py  critic.py  planner.py  retriever.py  state.py  synthesizer.py
deep_rag_backend/inference/commands/: __init__.py  graph.py  infer.py  infer_graph.py  query.py  query_graph.py
deep_rag_backend/inference/graph/: agent_logger.py  builder.py  constants.py  graph_viz.py  graph_wrapper.py  state.py
deep_rag_backend/inference/llm/: __init__.py  wrapper.py
deep_rag_backend/inference/routes/: __init__.py  ask.py  ask_graph.py  diagnostics.py  documents.py  graph_export.py  infer.py  infer_graph.py  ingest.py  models.py  threads.py
deep_rag_backend/ingestion/: chunking.py  ingest.py  ingest_image.py  ingest_text.py  ingest_unified.py  title_extract.py
deep_rag_backend/ingestion/db_ops/: __init__.py  chunks.py  document.py
deep_rag_backend/ingestion/embeddings/: __init__.py  batch.py  image.py  model.py  multimodal.py  text.py  utils.py
deep_rag_backend/retrieval/: __init__.py  confidence.py  db_utils.py  diagnostics.py  document_structure.py  retrieval.py  sanitize.py  vector_utils.py  wait.py
deep_rag_backend/retrieval/reranker/: __init__.py  model.py  rerank.py
deep_rag_backend/retrieval/sql/: exclusion.py  hybrid.py
deep_rag_backend/retrieval/stages/: __init__.py  merge.py  stage_one.py  stage_two.py
deep_rag_backend/retrieval/thread_tracking/: __init__.py  get.py  log.py  update.py
deep_rag_backend/scripts/: ENDPOINT_TESTING_GUIDE.md  README_TEST_ENDPOINTS.md  __init__.py  clean_cache.py  download_model.py  entrypoint.sh  logs.py  test_endpoints_quick.sh
deep_rag_backend/tests/: conftest.py
deep_rag_backend/tests/integration/: test_llm_providers.py  test_llm_providers_gemini.py  test_llm_providers_ollama.py  test_llm_providers_openai.py  test_thread_tracking.py
deep_rag_backend/tests/unit/: test_agents_compressor.py  test_agents_critic.py  test_agents_planner.py  test_agents_retriever.py  test_agents_synthesizer.py  test_embeddings_batch.py  test_embeddings_image.py  test_embeddings_multimodal.py  test_embeddings_text.py  test_embeddings_utils.py  test_graph_nodes_retriever.py  test_graph_nodes_synthesizer.py  test_llm_providers_gemini.py  test_llm_wrapper.py  test_retrieval_confidence.py  test_retrieval_merge.py  (+4 more)
(+220 files in other folders)
