[project]
name = "deep-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
]

[project.scripts]
deep-rag = "inference.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]